# å¥–åŠ±æ•ˆæœUIè„šæœ¬
extends CanvasLayer

signal reward_finished

@onready var control: Control = $Control
@onready var panel: Panel = $Control/Panel
@onready var icon_label: Label = $Control/Panel/VBoxContainer/IconLabel
@onready var text_label: RichTextLabel = $Control/Panel/VBoxContainer/TextLabel

var current_tween: Tween = null
var is_playing: bool = false  # â­ æ ‡å¿—ï¼šæ˜¯å¦æ­£åœ¨æ’­æ”¾åŠ¨ç”»

func _ready():
	visible = false
	# è®¾ç½®é¼ æ ‡è¿‡æ»¤ï¼Œä¸å½±å“æ¸¸æˆæ“ä½œ
	if control:
		control.mouse_filter = Control.MOUSE_FILTER_IGNORE

func show_keyword_reward(keyword, chapter: int):
	"""æ˜¾ç¤ºå…³é”®è¯æ”¶é›†å¥–åŠ±
	Args:
		keyword: æ”¶é›†åˆ°çš„å…³é”®è¯ï¼ˆå¯èƒ½æ˜¯å­—ç¬¦ä¸²æˆ–æ•°ç»„ï¼‰
		chapter: å½“å‰ç« èŠ‚ï¼ˆ1, 2, 3ï¼‰
	"""
	# â­ å¦‚æœæ­£åœ¨æ’­æ”¾åŠ¨ç”»ï¼Œç­‰å¾…å‰ä¸€ä¸ªåŠ¨ç”»å®Œæˆ
	if is_playing:
		print("[DEBUG] ç­‰å¾…å‰ä¸€ä¸ªå¥–åŠ±åŠ¨ç”»å®Œæˆ...")
		await reward_finished
		# ç­‰å¾…ä¸€å¸§ï¼Œç¡®ä¿çŠ¶æ€å·²é‡ç½®
		await get_tree().process_frame
	
	# â­ è®¾ç½®æ’­æ”¾æ ‡å¿—
	is_playing = true
	
	_setup_ui_style(chapter)
	
	# â­ ç¡®ä¿åªæ˜¾ç¤ºä¸»å…³é”®è¯ï¼ˆå¤„ç†å„ç§å¯èƒ½çš„è¾“å…¥æ ¼å¼ï¼‰
	var display_keyword: String = ""
	
	# è°ƒè¯•ï¼šæ‰“å°æ¥æ”¶åˆ°çš„ keyword ç±»å‹å’Œå†…å®¹
	print("[DEBUG] RewardEffectUI æ¥æ”¶åˆ°çš„ keyword ç±»å‹: ", typeof(keyword), " å†…å®¹: ", keyword)
	
	if keyword is Array:
		# å¦‚æœæ˜¯æ•°ç»„ï¼Œåªå–ç¬¬ä¸€ä¸ªå…ƒç´ ï¼ˆä¸»å…³é”®è¯ï¼‰
		if keyword.size() > 0:
			display_keyword = str(keyword[0])
			print("[DEBUG] ä»æ•°ç»„ä¸­æå–ä¸»å…³é”®è¯: ", display_keyword)
		else:
			display_keyword = ""
	else:
		# å¦‚æœæ˜¯å­—ç¬¦ä¸²ï¼Œæ£€æŸ¥æ˜¯å¦åŒ…å«æ•°ç»„æ ¼å¼ï¼ˆå¯èƒ½æ˜¯å­—ç¬¦ä¸²åŒ–çš„æ•°ç»„ï¼‰
		var keyword_str = str(keyword)
		# æ£€æŸ¥æ˜¯å¦æ˜¯ JSON æ•°ç»„æ ¼å¼çš„å­—ç¬¦ä¸²ï¼ˆå¦‚ '["å…³é”®è¯1", "å…³é”®è¯2"]'ï¼‰
		if keyword_str.begins_with("[") and keyword_str.ends_with("]"):
			# å°è¯•è§£æ JSON æ•°ç»„
			var json = JSON.new()
			var parse_result = json.parse(keyword_str)
			if parse_result == OK:
				var parsed_array = json.data
				if parsed_array is Array and parsed_array.size() > 0:
					display_keyword = str(parsed_array[0])
					print("[DEBUG] ä» JSON å­—ç¬¦ä¸²ä¸­è§£æå¹¶æå–ä¸»å…³é”®è¯: ", display_keyword)
				else:
					display_keyword = keyword_str
			else:
				# è§£æå¤±è´¥ï¼Œç›´æ¥ä½¿ç”¨å­—ç¬¦ä¸²
				display_keyword = keyword_str
		else:
			# æ™®é€šå­—ç¬¦ä¸²ï¼Œç›´æ¥ä½¿ç”¨
			display_keyword = keyword_str
	
	# è®¾ç½®å›¾æ ‡å’Œæ–‡æœ¬
	icon_label.text = "âœ“"
	var text_color_hex = text_label.get_theme_color("default_color").to_html()
	text_label.text = "[center]æ”¶é›†åˆ°å…³é”®è¯ï¼š\n[color=%s]%s[/color][/center]" % [text_color_hex, display_keyword]
	print("[DEBUG] æœ€ç»ˆæ˜¾ç¤ºçš„å…³é”®è¯: ", display_keyword)
	
	# æ˜¾ç¤ºå¹¶æ’­æ”¾åŠ¨ç”»ï¼ˆç­‰å¾…åŠ¨ç”»å®Œæˆï¼‰
	await _play_reward_animation()
	
	# â­ é‡ç½®æ’­æ”¾æ ‡å¿—
	is_playing = false

func show_quiz_reward(correct_count: int, chapter: int):
	"""æ˜¾ç¤ºç­”é¢˜æ­£ç¡®å¥–åŠ±
	Args:
		correct_count: å·²ç­”å¯¹çš„é¢˜ç›®æ•°é‡
		chapter: å½“å‰ç« èŠ‚ï¼ˆ1, 2, 3ï¼‰
	"""
	# â­ å¦‚æœæ­£åœ¨æ’­æ”¾åŠ¨ç”»ï¼Œç­‰å¾…å‰ä¸€ä¸ªåŠ¨ç”»å®Œæˆ
	if is_playing:
		print("[DEBUG] ç­‰å¾…å‰ä¸€ä¸ªå¥–åŠ±åŠ¨ç”»å®Œæˆ...")
		await reward_finished
		# ç­‰å¾…ä¸€å¸§ï¼Œç¡®ä¿çŠ¶æ€å·²é‡ç½®
		await get_tree().process_frame
	
	# â­ è®¾ç½®æ’­æ”¾æ ‡å¿—
	is_playing = true
	
	_setup_ui_style(chapter)
	
	# è®¾ç½®å›¾æ ‡å’Œæ–‡æœ¬ï¼ˆæ ¹æ®ç­”å¯¹é¢˜ç›®æ•°é‡æ˜¾ç¤ºï¼‰
	icon_label.text = "â­"
	var text_color_hex = text_label.get_theme_color("default_color").to_html()
	if correct_count == 1:
		text_label.text = "[center][color=%s]ç­”å¯¹ 1 é¢˜ï¼[/color][/center]" % text_color_hex
	else:
		text_label.text = "[center][color=%s]ç­”å¯¹ %d é¢˜ï¼[/color][/center]" % [text_color_hex, correct_count]
	
	# æ˜¾ç¤ºå¹¶æ’­æ”¾åŠ¨ç”»
	_play_reward_animation()

func show_clue_reward(clue_title: String, chapter: int):
	"""æ˜¾ç¤ºçº¿ç´¢æ”¶é›†å¥–åŠ±
	Args:
		clue_title: æ”¶é›†åˆ°çš„çº¿ç´¢æ ‡é¢˜
		chapter: å½“å‰ç« èŠ‚ï¼ˆ1, 2, 3ï¼‰
	"""
	_setup_ui_style(chapter)
	
	# è®¾ç½®å›¾æ ‡å’Œæ–‡æœ¬
	icon_label.text = "ğŸ”"  # ä½¿ç”¨æ”¾å¤§é•œå›¾æ ‡è¡¨ç¤ºçº¿ç´¢
	var text_color_hex = text_label.get_theme_color("default_color").to_html()
	text_label.text = "[center]æ”¶é›†åˆ°çº¿ç´¢ï¼š\n[color=%s]%s[/color][/center]" % [text_color_hex, clue_title]
	
	# æ˜¾ç¤ºå¹¶æ’­æ”¾åŠ¨ç”»
	_play_reward_animation()

func show_achievement_reward(achievement_title: String, chapter: int, trophy_name: String = ""):
	"""æ˜¾ç¤ºæˆå°±å¥–åŠ±
	Args:
		achievement_title: æˆå°±æ ‡é¢˜
		chapter: å½“å‰ç« èŠ‚ï¼ˆ1, 2, 3ï¼‰
		trophy_name: å¥–æ¯åç§°ï¼ˆç”¨äºæç¤ºï¼‰
	"""
	_setup_ui_style(chapter)
	
	# â­ æ ¹æ®ç« èŠ‚ä½¿ç”¨ä¸åŒçš„å¥–æ¯å›¾æ ‡
	var trophy_icon = ""
	match chapter:
		1:
			trophy_icon = "ğŸŒ¿"  # é’å¹´æ—¶æœŸ - å«©èŠ½/ç»¿å¶
		2:
			trophy_icon = "â­"  # é•¿å®‰æ—¶æœŸ - æ˜Ÿæ˜Ÿ
		3:
			trophy_icon = "ğŸŒ™"  # æ™šå¹´æ—¶æœŸ - æœˆäº®
		_:
			trophy_icon = "ğŸ†"  # é»˜è®¤å¥–æ¯
	
	icon_label.text = trophy_icon
	
	# â­ æ·»åŠ èƒŒåŒ…æç¤ºï¼ˆä½¿ç”¨BBCodeè®©èƒŒåŒ…æç¤ºæ–‡å­—æ›´å°ï¼‰
	var text_color_hex = text_label.get_theme_color("default_color").to_html()
	var display_text = "[center]è·å¾—æˆå°±ï¼š\n%s" % achievement_title
	if trophy_name != "":
		display_text += "\n[font_size=60][color=%s]ğŸ’ å·²å°† %s æ”¾å…¥èƒŒåŒ…[/color][/font_size][/center]" % [text_color_hex, trophy_name]
	else:
		display_text += "\n[font_size=60][color=%s]ğŸ’ å·²å°†å¥–æ¯æ”¾å…¥èƒŒåŒ…[/color][/font_size][/center]" % text_color_hex
	
	# ä½¿ç”¨BBCodeæ ¼å¼
	text_label.text = display_text
	
	# æ˜¾ç¤ºå¹¶æ’­æ”¾åŠ¨ç”»ï¼ˆç­‰å¾…åŠ¨ç”»å®Œæˆï¼‰
	await _play_reward_animation()
	
	# â­ é‡ç½®æ’­æ”¾æ ‡å¿—
	is_playing = false

func _setup_ui_style(chapter: int):
	"""æ ¹æ®ç« èŠ‚è®¾ç½®UIæ ·å¼ï¼ˆå¤§å·ç‰¹æ•ˆï¼‰
	Args:
		chapter: å½“å‰ç« èŠ‚ï¼ˆ1, 2, 3ï¼‰
	"""
	# è®¾ç½®å…¨å±èƒŒæ™¯ï¼ˆé€æ˜ï¼Œä¸é˜»æŒ¡æ¸¸æˆï¼‰
	if control:
		control.set_anchors_preset(Control.PRESET_FULL_RECT)
		control.mouse_filter = Control.MOUSE_FILTER_IGNORE
	
	# è®¾ç½®é¢æ¿æ ·å¼ï¼ˆè¶…å¤§å°ºå¯¸ï¼‰
	if panel:
		panel.set_anchors_preset(Control.PRESET_CENTER)
		panel.custom_minimum_size = Vector2(1600, 600)  # è¶…å¤§å°ºå¯¸é¢æ¿ï¼ˆä»1200x400å¢å¤§åˆ°1600x500ï¼‰
		panel.offset_left = -800
		panel.offset_top = -300
		panel.offset_right = 800
		panel.offset_bottom = 300
		
		# æ ¹æ®ç« èŠ‚è®¾ç½®é¢œè‰²
		var style_box = StyleBoxFlat.new()
		match chapter:
			1:  # ç« èŠ‚1ï¼šé’å¹´æ—¶æœŸ - ç»¿è‰²ç³»
				style_box.bg_color = Color(0.2, 0.7, 0.3, 0.95)  # ç»¿è‰²èƒŒæ™¯
				style_box.border_color = Color(0.1, 0.5, 0.2, 1.0)  # æ·±ç»¿è‰²è¾¹æ¡†
			2:  # ç« èŠ‚2ï¼šä¸­å¹´æ—¶æœŸ - é‡‘è‰²ç³»
				style_box.bg_color = Color(0.9, 0.7, 0.2, 0.95)  # é‡‘è‰²èƒŒæ™¯
				style_box.border_color = Color(0.7, 0.5, 0.1, 1.0)  # æ·±é‡‘è‰²è¾¹æ¡†
			3:  # ç« èŠ‚3ï¼šè€å¹´æ—¶æœŸ - æ£•è‰²ç³»
				style_box.bg_color = Color(0.6, 0.5, 0.4, 0.95)  # æ£•è‰²èƒŒæ™¯
				style_box.border_color = Color(0.4, 0.3, 0.2, 1.0)  # æ·±æ£•è‰²è¾¹æ¡†
			_:  # é»˜è®¤ï¼šç»¿è‰²
				style_box.bg_color = Color(0.2, 0.7, 0.3, 0.95)
				style_box.border_color = Color(0.1, 0.5, 0.2, 1.0)
		
		style_box.border_width_left = 8
		style_box.border_width_top = 8
		style_box.border_width_right = 8
		style_box.border_width_bottom = 8
		style_box.corner_radius_top_left = 20
		style_box.corner_radius_top_right = 20
		style_box.corner_radius_bottom_left = 20
		style_box.corner_radius_bottom_right = 20
		style_box.shadow_color = Color(0.0, 0.0, 0.0, 0.5)
		style_box.shadow_size = 15
		style_box.shadow_offset = Vector2(0, 8)
		panel.add_theme_stylebox_override("panel", style_box)
	
	# è®¾ç½®å›¾æ ‡æ ·å¼ï¼ˆè¶…å¤§å·ï¼‰
	if icon_label:
		icon_label.add_theme_font_size_override("font_size", 150)  # è¶…å¤§å›¾æ ‡ï¼ˆä»120å¢å¤§åˆ°150ï¼‰
		icon_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		icon_label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
		
		# æ ¹æ®ç« èŠ‚è®¾ç½®å›¾æ ‡é¢œè‰²
		match chapter:
			1:  # ç»¿è‰²
				icon_label.add_theme_color_override("font_color", Color(1.0, 1.0, 1.0, 1.0))  # ç™½è‰²å›¾æ ‡
			2:  # é‡‘è‰²
				icon_label.add_theme_color_override("font_color", Color(1.0, 0.95, 0.8, 1.0))  # æµ…é‡‘è‰²å›¾æ ‡
			3:  # æ£•è‰²
				icon_label.add_theme_color_override("font_color", Color(0.95, 0.9, 0.85, 1.0))  # æµ…æ£•è‰²å›¾æ ‡
			_:
				icon_label.add_theme_color_override("font_color", Color(1.0, 1.0, 1.0, 1.0))
	
	# è®¾ç½®æ–‡æœ¬æ ·å¼ï¼ˆå¤§å·å­—ä½“ï¼‰
	if text_label:
		text_label.add_theme_font_size_override("normal_font_size", 90)  # å¤§å·å­—ä½“ï¼ˆä»72å¢å¤§åˆ°90ï¼‰
		text_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		text_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
		text_label.fit_content = true
		
		# æ ¹æ®ç« èŠ‚è®¾ç½®æ–‡æœ¬é¢œè‰²ï¼ˆRichTextLabelä½¿ç”¨BBCodeè®¾ç½®é¢œè‰²ï¼‰
		var text_color = Color(1.0, 1.0, 1.0, 1.0)
		match chapter:
			1:  # ç»¿è‰²
				text_color = Color(1.0, 1.0, 1.0, 1.0)  # ç™½è‰²æ–‡å­—
			2:  # é‡‘è‰²
				text_color = Color(1.0, 0.95, 0.8, 1.0)  # æµ…é‡‘è‰²æ–‡å­—
			3:  # æ£•è‰²
				text_color = Color(0.95, 0.9, 0.85, 1.0)  # æµ…æ£•è‰²æ–‡å­—
		
		# è®¾ç½®é»˜è®¤æ–‡æœ¬é¢œè‰²
		text_label.add_theme_color_override("default_color", text_color)

func _play_reward_animation():
	"""æ’­æ”¾å¥–åŠ±åŠ¨ç”»"""
	visible = true
	
	# åˆå§‹çŠ¶æ€ï¼šé€æ˜ä¸”ç¼©å°
	panel.modulate.a = 0.0
	panel.scale = Vector2(0.5, 0.5)
	
	# æ¸…é™¤ä¹‹å‰çš„åŠ¨ç”»
	if current_tween:
		current_tween.kill()
	current_tween = create_tween()
	current_tween.set_parallel(true)
	
	# æ·¡å…¥åŠ¨ç”»ï¼ˆ0.3ç§’ï¼‰
	current_tween.tween_property(panel, "modulate:a", 1.0, 0.3)
	
	# æ”¾å¤§åŠ¨ç”»ï¼ˆ0.3ç§’ï¼Œä»0.5åˆ°1.1ï¼Œç„¶åå›å¼¹åˆ°1.0ï¼‰
	current_tween.tween_property(panel, "scale", Vector2(1.1, 1.1), 0.3)
	await get_tree().create_timer(0.3).timeout
	
	# å›å¼¹åŠ¨ç”»ï¼ˆ0.2ç§’ï¼Œä»1.1åˆ°1.0ï¼‰
	if current_tween:
		current_tween.kill()
	current_tween = create_tween()
	current_tween.tween_property(panel, "scale", Vector2(1.0, 1.0), 0.2)
	
	# åœç•™1.5ç§’
	await get_tree().create_timer(1.5).timeout
	
	# æ·¡å‡ºåŠ¨ç”»ï¼ˆ0.5ç§’ï¼‰
	if current_tween:
		current_tween.kill()
	current_tween = create_tween()
	current_tween.tween_property(panel, "modulate:a", 0.0, 0.5)
	await get_tree().create_timer(0.5).timeout
	
	# éšè—å¹¶å‘é€å®Œæˆä¿¡å·
	visible = false
	reward_finished.emit()

